# babilonia

./: .env  .gitignore  README.md  pyproject.toml
src/: crud.py  database.py  main.py  models.py  schemas.py
src/api/endpoints/: auth.py  chat.py  exercises.py  languages.py  learning_content.py  phrasebook.py
src/utils/: llm_handler.py
